samples/_failures_safe/1761405958_d6aaca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c6932e6.c: In function ‘main’:
./samples/SAFE/__tmp_6c6932e6.c:146:5: error: expected ‘,’ or ‘;’ at end of input
  146 |     int unique_count = count_unique_words
      |     ^~~
./samples/SAFE/__tmp_6c6932e6.c:146:5: error: expected declaration or statement at end of input
